--- a/hobbycoding/templates/base.html
+++ b/hobbycoding/templates/base.html
@@ -49,6 +49,11 @@
     {% block nav-main %}
         <nav class="main">
             네비게이션
+            {% if user.is_authenticated %}
+                <p>나는 {{ user.username }}. 이다</p>
+            {% else %}
+                <p>로그인안함</p>
+            {% endif %}
         </nav>
     {% endblock %}
     <div id="content">
