avatar가 없다고 회원가입이 안됨

--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -31,6 +31,14 @@ sign up
         </div>
     </div>
 
+    {{ signupform.nickname.label_tag }}
+    {{ signupform.nickname }}
+    {{ signupform.nickname.errors|striptags }}
+
+    {{ signupform.avatar.label_tag }}
+    {{ signupform.avatar }}
+    {{ signupform.avatar.errors|striptags }}
+
     <!-- Password1 input-->
     <div class="row control-group">
         <div class="form-group col-xs-12 floating-label-form-group controls">
