--- a/hobbycoding/templates/base.html
+++ b/hobbycoding/templates/base.html
@@ -37,7 +37,7 @@
           content="{% block tw_image %}{{ SITE_URL }}{% static 'image/test.jpg' %}{% endblock %}"/>
     {% block base-css %}
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+{#        <link rel="stylesheet" href="{% static 'css/base.css' %}">#}
     {% endblock %}
     {% block page-css %}{% endblock %}
     <!--[if lt IE 9]>
