avatar cleaned_data로 추가

--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -6,7 +6,7 @@ sign up
 {% block content %}
 
 <!-- Sign Up Form -->
-<form id="signup" class="form-horizontal" method="post" action="{% url 'signup' %}">
+<form id="signup" class="form-horizontal" method="post" action="{% url 'signup' %}" enctype="multipart/form-data">
     {% csrf_token %}
 
     <!-- Username input-->
