--- a/hobbycoding/templates/base.html
+++ b/hobbycoding/templates/base.html
@@ -39,8 +39,7 @@
     {% block base-css %}
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.blue_grey-cyan.min.css" />
-
-        {#        <link rel="stylesheet" href="{% static 'css/base.css' %}">#}
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
     {% block page-css %}{% endblock %}
     <!--[if lt IE 9]>
@@ -66,54 +65,58 @@
     }(document, 'script', 'facebook-jssdk'));
 </script>
 {% block body %}
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     {% block nav-main %}
-        <nav class="main">
-            네비게이션
-            {% if user.is_authenticated %}
-                <img src="{{ user.avatar.url }}">
-                <p>나는 {{ user.email }} 이다</p>
-            {% else %}
-                <p>로그인안함</p>
-            {% endif %}
-        </nav>
-        <div class="demo-layout-transparent mdl-layout mdl-js-layout">
-            <header class="mdl-layout__header mdl-layout__header--transparent">
-                <div class="mdl-layout__header-row">
-                    <!-- Title -->
-                    <span class="mdl-layout-title">Title</span>
-                    <!-- Add spacer, to align navigation to the right -->
-                    <div class="mdl-layout-spacer"></div>
-                    <!-- Navigation -->
-                    <nav class="mdl-navigation">
-                        <a class="mdl-navigation__link" href="">Link</a>
-                        <a class="mdl-navigation__link" href="">Link</a>
-                        <a class="mdl-navigation__link" href="">Link</a>
-                        <a class="mdl-navigation__link" href="">Link</a>
-                    </nav>
-                </div>
-            </header>
-            <div class="mdl-layout__drawer">
-                <span class="mdl-layout-title">Title</span>
-                <nav class="mdl-navigation">
-                    <a class="mdl-navigation__link" href="">Link</a>
-                    <a class="mdl-navigation__link" href="">Link</a>
-                    <a class="mdl-navigation__link" href="">Link</a>
-                    <a class="mdl-navigation__link" href="">Link</a>
+        <header class="mdl-layout__header">
+            <div class="mdl-layout__header-row">
+                <!-- Title -->
+                <span class="mdl-layout-title">Hobbycoding</span>
+                <!-- Add spacer, to align navigation to the right -->
+                <div class="mdl-layout-spacer"></div>
+                <!-- Navigation. We hide it in small screens. -->
+                <nav class="mdl-navigation mdl-layout--large-screen-only">
+                    <a class="mdl-navigation__link" href="/hoco">hocos</a>
+                    <a class="mdl-navigation__link" href="/signup">회원가입</a>
+
+
+                    {% if user.is_authenticated %}
+                        <img src="{{ user.avatar.url }}">
+                        <a class="mdl-navigation__link" href="">{{ user.email }}</a>
+                    {% else %}
+                        <a class="mdl-navigation__link" href="/login">로그인</a>
+                    {% endif %}
                 </nav>
             </div>
-            <main class="mdl-layout__content">
-            </main>
+        </header>
+        <div class="mdl-layout__drawer">
+            <span class="mdl-layout-title">Title</span>
+            <nav class="mdl-navigation">
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Link</a>
+            </nav>
         </div>
     {% endblock %}
-    <div id="content">
-        {% block content %}
-        {% endblock %}
-    </div>
+    <main class="mdl-layout__content">
+        <div id="content" class="page-content">
+            {% block content %}
+            {% endblock %}
+        </div>
+
     {% block page-footer %}
-        <footer class="page-footer">
-            푸터푸터
+        <footer class="page-footer mdl-mini-footer">
+            <div class="mdl-mini-footer__left-section">
+                <div class="mdl-logo">Title</div>
+                <ul class="mdl-mini-footer__link-list">
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Privacy & Terms</a></li>
+                </ul>
+            </div>
         </footer>
     {% endblock %}
+    </main>
+
 {% endblock %}
 {% block base-js %}
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -123,5 +126,6 @@
     <script src="{% static 'js/base.js' %}"></script>
     {% block js %}{% endblock %}
 {% endblock %}
+</div>
 </body>
 </html>
