--- a/hobbycoding/static/less/base.less
+++ b/hobbycoding/static/less/base.less
@@ -1,6 +1,10 @@
 @import (once) "var.less";
 @import (once) "common.less";
 
-body {
-
+nav.nav_main {
+  a.user_info {
+    img {
+      width: 30px;
+    }
+  }
 }
