--- a/meetup/templates/meetup_list.html
+++ b/meetup/templates/meetup_list.html
@@ -1,7 +1,20 @@
 {% extends 'base.html' %}
 {% block content %}
-    호코 리스트
+    <h1>호코 리스트</h1>
     {% for meetup in meetups %}
+        <div class="demo-card-square mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title mdl-card--expand" >
+                <h2 class="mdl-card__title-text"><a href="{% url 'meetup_detail' pk=meetup.pk %}">{{ meetup.title }}</a></h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+                {{ meetup.desc|linebreaks }}
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    {{ meetup.created_date }}
+                </a>
+            </div>
+        </div>
         <div class="post">
             <div class="date">
                 {{ meetup.created_date }}
