materializecss로 프레임워크 변경

--- a/hobbycoding/static/less/base.less
+++ b/hobbycoding/static/less/base.less
@@ -1,10 +1,15 @@
 @import (once) "var.less";
 @import (once) "common.less";
 
-nav.nav_main {
-  a.user_info {
-    img {
-      width: 30px;
+nav.nav-main {
+  ul#nav-top {
+    li.user-info {
+      img {
+        width: 30px;
+      }
     }
+  }
+  ul#nav-mobile {
+
   }
 }
