--- a/hobbycoding/static/less/var.less
+++ b/hobbycoding/static/less/var.less
@@ -1,7 +1,7 @@
-@primary: #896DA5;
-@secondary: #94B028;
-@tertiary: #74d0cb;
-@light-gray: #CECECE;
+@primary: #364F6B;
+@secondary: #3FC1C9;
+@tertiary: #FC5185;
+@light-gray: #F5F5F5;
 @mid-gray: #ABABAB;
 @warning: #F16060;
 
