--- a/meetup/templates/meetup_list.html
+++ b/meetup/templates/meetup_list.html
@@ -1,27 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>호코 리스트</h1>
-    {% for meetup in meetups %}
-        <div class="demo-card-square mdl-card mdl-shadow--2dp">
-            <div class="mdl-card__title mdl-card--expand" >
-                <h2 class="mdl-card__title-text"><a href="{% url 'meetup_detail' pk=meetup.pk %}">{{ meetup.title }}</a></h2>
+    <div class="row">
+        {% for meetup in meetups %}
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="{{ meetup.image_file.url }}">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">{{ meetup.title }}<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">{{ meetup.created_date }}</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">{{ meetup.title }}<i class="material-icons right">close</i></span>
+                        <p>{{ meetup.desc|linebreaks }}</p>
+                    </div>
+                </div>
             </div>
-            <div class="mdl-card__supporting-text">
-                {{ meetup.desc|linebreaks }}
-            </div>
-            <div class="mdl-card__actions mdl-card--border">
-                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-                    {{ meetup.created_date }}
-                </a>
-            </div>
-        </div>
-        <div class="post">
-            <div class="date">
-                {{ meetup.created_date }}
-            </div>
-            <img src='{{ meetup.image_file.url }}'>
-            <h1><a href="{% url 'meetup_detail' pk=meetup.pk %}">{{ meetup.title }}</a></h1>
-            <p>{{ meetup.desc|linebreaks }}</p>
-        </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 {% endblock %}
