댓글 새 페이지에서 달기

--- a/hobbycoding/templates/base.html
+++ b/hobbycoding/templates/base.html
@@ -69,7 +69,7 @@
         <nav class="nav-main teal lighten-4" role="navigation">
             <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">HobbyCoding</a>
                 <ul id="nav-top" class="right hide-on-med-and-down">
-                    <li><a href="/hoco">hocos</a></li>
+                    <li><a href="/meetup">meetups</a></li>
                     {% if user.is_authenticated %}
                         <li class="user-info"><a href="#"><img src="{{ user.avatar.url }}"/>{{ user.email }}</a></li>
                         <li><a href="/logout">로그아웃</a></li>
