--- a/meetup/templates/meetup_list.html
+++ b/meetup/templates/meetup_list.html
@@ -1,21 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>호코 리스트</h1>
+    <h1>밋업 리스트</h1>
     <div class="row">
         {% for meetup in meetups %}
             <div class="col s12 m6">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
+                        <a href="{% url 'meetup_detail' pk=meetup.pk %}">
                         <img class="activator" src="{{ meetup.image_file.url }}">
+                            </a>
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">{{ meetup.title }}<i class="material-icons right">more_vert</i></span>
+                        <span class="card-title activator grey-text text-darken-4"><a href="{% url 'meetup_detail' pk=meetup.pk %}">{{ meetup.title }}</a><i class="material-icons right">more_vert</i></span>
                         <p><a href="#">{{ meetup.created_date }}</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">{{ meetup.title }}<i class="material-icons right">close</i></span>
                         <p>{{ meetup.desc|linebreaks }}</p>
                     </div>
+
                 </div>
             </div>
         {% endfor %}
