--- a/meetup/templates/meetup_list.html
+++ b/meetup/templates/meetup_list.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h1>밋업 리스트</h1>
     <div class="row">
-        {% for meetup in meetups %}
+        {% for meetup in meetup_list %}
             <div class="col s12 m6">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
