--- a/meetup/templates/meetup_detail.html
+++ b/meetup/templates/meetup_detail.html
@@ -10,8 +10,8 @@
         </ul>
     </div>
     <div class="likes-container">
-        <button><a target="_blank" href="{% url 'meetup_join' meetup.id %}"></a>관심 버튼</button>
-        관심자 목록: {{ meetup.likes }}
+        <button><a href="{% url 'meetup_like' meetup.id %}">관심 버튼</a></button>
+        관심자 목록: {{ meetup.likes.all }}
         {% for like in meetup.likes.all %}
             <p>{{ like.nickname }}</p>
         {% empty %}
