main nav design

--- a/hobbycoding/static/less/base.less
+++ b/hobbycoding/static/less/base.less
@@ -1,6 +1,7 @@
 @import (once) "var.less";
 @import (once) "common.less";
 @import (once) "meetup.less";
+@import (once) "home.less";
 
 nav.nav-main {
   ul#nav-top {
@@ -11,6 +12,10 @@ nav.nav-main {
     }
   }
   ul#nav-mobile {
-
+    li.user-info {
+      img {
+        width: 30px;
+      }
+    }
   }
 }
