--- a/meetup/templates/meetup_detail.html
+++ b/meetup/templates/meetup_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% block content %}
     hoco 디테일
     <img src='{{ meetup.image_file.url }}'>
@@ -7,6 +8,24 @@
             <li>주최자: {{ meetup.author }}</li>
             <li>제목: {{ meetup.title }}</li>
             <li>설명: {{ meetup.desc }}</li>
+            <li>장소:
+                <div class="map_wrap">
+                    <div id="map" style="width:750px;height:350px;position:relative;overflow:hidden;"></div>
+
+                    <div id="menu_wrap" class="bg_white">
+                        <div class="option">
+                            <p>
+                            <form onsubmit="searchPlaces(); return false;">
+                                키워드 : <input type="text" value="이태원 맛집" id="keyword" size="15">
+                                <button type="submit">검색하기</button>
+                            </p>
+                        </div>
+                        <hr>
+                        <ul id="placesList"></ul>
+                        <div id="pagination"></div>
+                    </div>
+                </div>
+            </li>
         </ul>
     </div>
     <div class="likes-container">
@@ -38,4 +57,8 @@
             <p>댓글이 없습니다</p>
         {% endfor %}
     </div>
+{% endblock %}
+{% block js %}
+    <script type="text/javascript" src="//apis.daum.net/maps/maps3.js?apikey=c0560d4dbb9c299defdcf21de8cab125&libraries=services"></script>
+    <script src="{% static 'js/map.js' %}"></script>
 {% endblock %}
