--- a/hobbycoding/templates/base.html
+++ b/hobbycoding/templates/base.html
@@ -40,6 +40,7 @@
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <link rel="stylesheet" href="{% static 'stylesheet/map.css' %}">
     {% endblock %}
     {% block page-css %}{% endblock %}
     <!--[if lt IE 9]>
