--- a/meetup/templates/meetup_list.html
+++ b/meetup/templates/meetup_list.html
@@ -3,12 +3,10 @@
     <h1>밋업 리스트</h1>
     <div class="row">
         <div class="col s12">
-            <form id="searchform" action="{% url 'meetup_filtered' %}" method="get" accept-charset="utf-8">
-                <input class="searchfield" id="searchbox" name="q" type="text" placeholder="Search">
-                <button class="searchbutton" type="submit">
-                    검색하기
-                </button>
-            </form>
+            <form action="" method="get">
+                <p><label for="id_title" class="">Title:</label> <input id="id_title" name="title" type="text"> <span class="helptext">Filter</span></p>
+                <input type="submit">
+            </form
         </div>
         {% for meetup in meetup_list %}
             <div class="col s12 m4">
