--- a/meetup/templates/meetup_list.html
+++ b/meetup/templates/meetup_list.html
@@ -4,9 +4,9 @@
     <div class="row">
         <div class="col s12">
             <form action="" method="get">
-                <p><label for="id_title" class="">Title:</label> <input id="id_title" name="title" type="text"> <span class="helptext">Filter</span></p>
+                <p><label for="id_title" class="">Title:</label> <input id="id_title" name="title" type="text"></p>
                 <input type="submit">
-            </form
+            </form>
         </div>
         {% for meetup in meetup_list %}
             <div class="col s12 m4">
