--- a/meetup/templates/meetup_edit.html
+++ b/meetup/templates/meetup_edit.html
@@ -7,12 +7,18 @@
             <form method="POST" action="{% url 'meetup_new' %}" enctype="multipart/form-data">
                 {% csrf_token %}
                 <p><label for="id_title">제목:</label> <input id="id_title" maxlength="200" name="title" type="text" /></p>
+                <p>{{ form.title.errors|striptags }}</p>
                 <p><label for="id_desc">설명:</label> <textarea cols="40" id="id_desc" name="desc" rows="10">
 </textarea></p>
+                <p>{{ form.desc.errors|striptags }}</p>
                 <p><label for="id_image_file">썸네일:</label> <input id="id_image_file" name="image_file" type="file" /></p>
+                <p>{{ form.image_file.errors|striptags }}</p>
                 <p><label for="id_location">장소 이름:</label> <input id="id_location" maxlength="50" name="location" type="text" /></p>
+                <p>{{ form.location.errors|striptags }}</p>
                 <p><label for="id_lat">위도:</label> <input id="id_lat" name="lat" step="any" type="number" /></p>
+                <p>{{ form.lat.errors|striptags }}</p>
                 <p><label for="id_lon">경도:</label> <input id="id_lon" name="lon" step="any" type="number" /></p>
+                <p>{{ form.lon.errors|striptags }}</p>
                 <div class="map_wrap">
                     <div id="map" style="width:100%;height:350px;position:relative;overflow:hidden;"></div>
 
