--- a/meetup/templates/meetup_list.html
+++ b/meetup/templates/meetup_list.html
@@ -13,7 +13,7 @@
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <a href="{% url 'meetup_detail' pk=meetup.pk %}">
-                            <img class="activator" src="{{ meetup.image_file.url }}">
+                            <img class="activator" src="{{ meetup.image_url }}">
                         </a>
                     </div>
                     <div class="card-content">
