--- a/meetup/templates/meetup_detail.html
+++ b/meetup/templates/meetup_detail.html
@@ -10,7 +10,7 @@
             <li>설명: {{ meetup.desc }}</li>
             <li>태그:
                 {% for tag in meetup.tags.all %}
-                    <p>{{ tag.title }}</p>
+                    <span>{{ tag }}</span>
                 {% empty %}
                     <p>태그 없음</p>
                 {% endfor %}
