--- a/meetup/templates/meetup_list.html
+++ b/meetup/templates/meetup_list.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col s12">
             <form action="" method="get">
-                <p><label for="id_title" class="">Title:</label> <input id="id_title" name="title" type="text"></p>
+                <p><label for="id_title" class="">통합검색</label> <input id="id_title" name="query" type="text"></p>
                 <input type="submit">
             </form>
         </div>
